# public/docs/swagger/openapi.yaml
@@ -83,6 +83,8 @@ paths:
     $ref: "./paths/student-job-applications.yaml#/paths/~1student~1job-applications"
   /student/job-applications/{id}:
     $ref: "./paths/student-job-applications.yaml#/paths/~1student~1job-applications~1{id}"
+  /student/job-applications/{id}/submit:
+    $ref: "./paths/student-job-applications.yaml#/paths/~1student~1job-applications~1{id}~1submit"
 
   /partnership-proposals:
     $ref: "./paths/partnership-proposals.yaml#/paths/~1partnership-proposals"
@@ -945,6 +947,7 @@ components:
           type: string
         status_submit:
           type: string
+          enum: [draft, submitted]
         submitted_at:
           nullable: true
           type: string
@@ -1357,6 +1360,16 @@ components:
       properties:
         job_vacancy_id:
           type: integer
+        cv:
+          type: string
+          format: binary
+        cover_letter:
+          type: string
+          maxLength: 2000
+
+    UpdateStudentJobApplicationRequest:
+      type: object
+      properties:
         cv:
           type: string
           format: binary
